Se agregó el archivo seed para poblar la base de datos y se eliminó el modelo de tags
